[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/godot-git-control.funabab/scripts/controls/merge_branch_dialog.gd" type="Script" id=1]

[node name="merge_branch_dialog" type="ConfirmationDialog" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 482.0
margin_bottom = 190.0
rect_min_size = Vector2( 400, 140 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
size_flags_horizontal = 2
size_flags_vertical = 2
popup_exclusive = true
window_title = "Merge"
resizable = false
dialog_hide_on_ok = true
script = ExtResource( 1 )

[node name="container" type="VBoxContainer" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -36.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
size_flags_horizontal = 2
size_flags_vertical = 2
custom_constants/separation = 10
alignment = 0

[node name="current_branch" type="VBoxContainer" parent="container" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 466.0
margin_bottom = 42.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 0
alignment = 0
_sections_unfolded = [ "Size Flags" ]

[node name="label" type="Label" parent="container/current_branch" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 95.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Current Branch"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Size Flags" ]

[node name="input" type="LineEdit" parent="container/current_branch" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 18.0
margin_right = 466.0
margin_bottom = 42.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 0
editable = false
focus_mode = 2
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
context_menu_enabled = true
_sections_unfolded = [ "Size Flags" ]

[node name="merge_branch" type="VBoxContainer" parent="container" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 52.0
margin_right = 466.0
margin_bottom = 90.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 0
alignment = 0
_sections_unfolded = [ "Size Flags" ]

[node name="label" type="Label" parent="container/merge_branch" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 122.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Merge from Branch"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Size Flags" ]

[node name="branches" type="OptionButton" parent="container/merge_branch" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 18.0
margin_right = 466.0
margin_bottom = 38.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 6
toggle_mode = false
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 0
selected = -1
items = [  ]
_sections_unfolded = [ "Size Flags" ]

[node name="no_fast_forward" type="VBoxContainer" parent="container" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 100.0
margin_right = 131.0
margin_bottom = 124.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
size_flags_horizontal = 2
size_flags_vertical = 2
alignment = 0

[node name="checkbox" type="CheckBox" parent="container/no_fast_forward" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 131.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
text = "No Fast-Forward"
flat = false
align = 0


